--- a/projects/flaigj/teammate2dominion/Makefile
+++ b/projects/flaigj/teammate2dominion/Makefile
@@ -18,99 +18,6 @@ badTestDrawCard: badTestDrawCard.c dominion.o rngs.o
 testBuyCard: testDrawCard.c dominion.o rngs.o
 	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
 
-testUpdateCoins: testUpdateCoins.c dominion.o rngs.o
-	gcc -o testUpdateCoins -g testUpdateCoins.c dominion.o rngs.o $(CFLAGS)
-
-unittest1: unittest1.c dominion.o rngs.o
-	gcc -o unittest1 -g unittest1.c dominion.c rngs.o $(CFLAGS)
-  
-unittest2: unittest2.c dominion.o rngs.o
-	gcc -o unittest2 -g unittest2.c dominion.c rngs.o $(CFLAGS)
-
-unittest3: unittest3.c dominion.o rngs.o
-	gcc -o unittest3 -g unittest3.c dominion.c rngs.o $(CFLAGS)
-  
-unittest4: unittest4.c dominion.o rngs.o
-	gcc -o unittest4 -g unittest4.c dominion.c rngs.o $(CFLAGS)
-  
-cardtest1: cardtest1.c dominion.o rngs.o
-	gcc -o cardtest1 -g cardtest1.c dominion.c rngs.o $(CFLAGS)
-  
-cardtest2: cardtest2.c dominion.o rngs.o
-	gcc -o cardtest2 -g cardtest2.c dominion.c rngs.o $(CFLAGS)
-
-cardtest3: cardtest3.c dominion.o rngs.o
-	gcc -o cardtest3 -g cardtest3.c dominion.c rngs.o $(CFLAGS)
-  
-cardtest4: cardtest4.c dominion.o rngs.o
-	gcc -o cardtest4 -g cardtest4.c dominion.c rngs.o $(CFLAGS)
-  
-unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c cardtest3.c cardtest4.c dominion.o rngs.o
-	echo "Result for running unit tests:" > unittestresults.out
-	
-	echo "unittest1.c:" >> unittestresults.out
-	gcc -o unittest1 dominion.o rngs.o unittest1.c $(CFLAGS)
-	unittest1 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "unittest2.c:" >> unittestresults.out
-	gcc -o unittest2 dominion.o rngs.o unittest2.c $(CFLAGS)
-	unittest2 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "unittest3.c:" >> unittestresults.out
-	gcc -o unittest3 dominion.o rngs.o unittest3.c $(CFLAGS)
-	unittest3 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "unittest4.c:" >> unittestresults.out
-	gcc -o unittest4 dominion.o rngs.o unittest4.c $(CFLAGS)
-	unittest4 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "cardtest1.c:" >> unittestresults.out
-	gcc -o cardtest1 dominion.o rngs.o cardtest1.c $(CFLAGS)
-	cardtest1 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "cardtest2.c:" >> unittestresults.out
-	gcc -o cardtest2 dominion.o rngs.o cardtest2.c $(CFLAGS)
-	cardtest2 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "cardtest3.c:" >> unittestresults.out
-	gcc -o cardtest3 dominion.o rngs.o cardtest3.c $(CFLAGS)
-	cardtest3 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
-	
-	echo "cardtest4.c:" >> unittestresults.out
-	gcc -o cardtest4 dominion.o rngs.o cardtest4.c $(CFLAGS)
-	cardtest4 >> unittestresults.out
-	gcov -b dominion.c >> unittestresults.out
- 
-randomtestcard: randomtestcard.c dominion.o rngs.o
-	gcc -o randomtestcard dominion.o rngs.o randomtestcard.c $(CFLAGS)
-
-randomtestadventurer: randomtestadventurer.c dominion.o rngs.o
-	gcc -o randomtestadventurer dominion.o rngs.o randomtestadventurer.c $(CFLAGS)
-	
-randomtestcard.out: randomtestcard.c dominion.o rngs.o
-	echo "Result for running randomtestcard:" > randomtestcard.out
-	
-	echo "randomtestcard.c:" >> randomtestcard.out
-	gcc -o randomtestcard dominion.o rngs.o randomtestcard.c $(CFLAGS)
-	randomtestcard >> randomtestcard.out
-	gcov -b dominion.c >> randomtestcard.out
-	 
-randomtestadventurer.out: randomtestadventurer.c dominion.o rngs.o
-	echo "Result for running randomtestadventurer:" > randomtestadventurer.out
-	
-	echo "randomtestadventurer.c:" >> randomtestadventurer.out
-	gcc -o randomtestadventurer dominion.o rngs.o randomtestadventurer.c $(CFLAGS)
-	randomtestadventurer >> randomtestadventurer.out
-	gcov -b dominion.c >> randomtestadventurer.out
-	
-	
 testAll: dominion.o testSuite.c
 	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CFLAGS)
 
@@ -119,14 +26,92 @@ interface.o: interface.h interface.c
 
 runtests: testDrawCard 
 	./testDrawCard &> unittestresult.out
-	gcov dominion.c >> unittestresult.out
+	gcov -b dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
-
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard
+unittest1: unittest1.c dominion.o rngs.o
+	gcc -o unittest1 unittest1.c -g dominion.o rngs.o $(CFLAGS)
+
+unittest2: unittest2.c dominion.o rngs.o
+	gcc -o unittest2 unittest2.c -g dominion.o rngs.o $(CFLAGS)
+
+unittest3: unittest3.c dominion.o rngs.o
+	gcc -o unittest3 unittest3.c -g dominion.o rngs.o $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o
+	gcc -o unittest4 unittest4.c -g dominion.o rngs.o $(CFLAGS)
+
+cardtest1: cardtest1.c dominion.o rngs.o
+	gcc -o cardtest1 cardtest1.c -g dominion.o rngs.o $(CFLAGS)
+
+cardtest2: cardtest2.c dominion.o rngs.o
+	gcc -o cardtest2 cardtest2.c -g dominion.o rngs.o $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o
+	gcc -o cardtest3 cardtest3.c -g dominion.o rngs.o $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o rngs.o
+	gcc -o cardtest4 cardtest4.c -g dominion.o rngs.o $(CFLAGS)
+
+randomtestadventurer: randomtestadventurer.c dominion.o rngs.o
+	gcc -o randomtestadventurer randomtestadventurer.c -g dominion.o rngs.o $(CFLAGS)
+
+randomtestcard: randomtestcard.c dominion.o rngs.o
+	gcc -o randomtestcard randomtestcard.c -g dominion.o rngs.o $(CFLAGS)
+
+unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c cardtest3.c cardtest4.c dominion.c rngs.o interface.o
+	echo "Unit test results:" > unittestresults.out
+	echo "cardtest1.c" >> unittestresults.out
+	gcc -o cardtest1 cardtest1.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	cardtest1 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "cardtest2.c" >> unittestresults.out
+	gcc -o cardtest2 cardtest2.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	cardtest2 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "cardtest3.c" >> unittestresults.out
+	gcc -o cardtest3 cardtest3.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	cardtest3 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "cardtest4.c" >> unittestresults.out
+	gcc -o cardtest4 cardtest4.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	cardtest4 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "unittest1.c" >> unittestresults.out
+	gcc -o unittest1 unittest1.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	unittest1 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "unittest2.c" >> unittestresults.out
+	gcc -o unittest2 unittest2.c -g dominion.c rngs.o $(CFLAGS)
+	unittest2 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "unittest3.c" >> unittestresults.out
+	gcc -o unittest3 unittest3.c -g dominion.c rngs.o $(CFLAGS)
+	unittest3 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+	echo "unittest4.c" >> unittestresults.out
+	gcc -o unittest4 unittest4.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	unittest4 >> unittestresults.out
+	gcov -b dominion.c >> unittestresults.out
+
+randomtestcard.out: randomtestcard.c dominion.c rngs.o interface.o
+	echo "Random test card results:" > randomtestcard.out
+	echo "randomtestcard.c" >> randomtestcard.out
+	gcc -o randomtestcard randomtestcard.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	randomtestcard >> randomtestcard.out
+	gcov -b dominion.c >> randomtestcard.out
+
+randomtestadventurer.out: randomtestadventurer.c dominion.c rngs.o interface.o
+	echo "Random test adventurer results:" > randomtestadventurer.out
+	echo "randomtestadventurer.c" >> randomtestadventurer.out
+	gcc -o randomtestadventurer randomtestadventurer.c -g dominion.c rngs.o interface.o $(CFLAGS)
+	randomtestadventurer >> randomtestadventurer.out
+	gcov -b dominion.c >> randomtestadventurer.out
+
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4 randomtestadventurer randomtestcard
 
 clean:
-	rm -f *.o unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4 playdom.exe playdom test.exe test player player.exe testInit testInit.exe *.gcov *.gcda *.gcno *.so *.out
+	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe badTestDrawCard.exe badTestDrawCard testDrawCard.exe testDrawCard unittest1.exe unittest1 unittest2.exe unittest2 unittest3.exe unittest3 unittest4.exe unittest4 cardtest1.exe cardtest1 cardtest2.exe cardtest2 cardtest3.exe cardtest3 cardtest4.exe cardtest4 randomtestadventurer randomtestcard *.out *.gcov *.gcda *.gcno *.so
