--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Assignment3/unittest3.c
 *.o
 *.gcda
 *.gcno
+projects/hattont/dominion/unitTest1
+projects/hattont/dominion/unitTest1
+projects/hattont/dominion/unitTest1
+projects/hattont/dominion/unittest1
