Assignment 5 complete. Changed folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ projects/hattont/dominion/unitTest1
 projects/hattont/dominion/unitTest1
 projects/hattont/dominion/unitTest1
 projects/hattont/dominion/unittest1
+projects/hattont/dominion/unittest1
